# MediaSort

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  sort_anime.py  sort_anime_test.py
src/: episode.rs  error.rs  main.rs  media_sort.rs  messager.rs  subtitle.rs
src/cmd/: cmd.rs  mod.rs  profile.rs  sort.rs  test.rs
src/search/: mod.rs  result.rs  search_tmdb.rs  search_tvmaze.rs  strings.rs
src/tui/: app.rs  event.rs  ui.rs
