[package]
name = "media_sort"
version = "0.3.1"
edition = "2021"

[dependencies]
regex = "1.10.5"
reqwest = { version = "0.12.4", features = ["json", "blocking"] }
serde_json = "1.0"
ffprobe = "0.4.0"
rayon = "1.10.0"
num_cpus = "1.16.0"
clap = { version = "4.5.9", features = ["derive", "cargo"] }
anyhow = "1.0.86"
once_cell = "1.19.0"
directories = "5.0.1"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = 3
panic = "abort"
