[package]
name = "MediaSort"
version = "0.4.4"
edition = "2021"

[dependencies]
regex = "1.11.1"
reqwest = { version = "0.12.9", features = ["json", "blocking"] }
serde_json = "1.0.132"
rayon = "1.10.0"
num_cpus = "1.16.0"
clap = { version = "4.5.20", features = ["derive", "cargo"] }
anyhow = "1.0.93"
once_cell = "1.20.2"
directories = "5.0.1"
indicatif = {version = "0.17.9", features = ["rayon"]}
serde = "1.0.215"
serde_urlencoded = "0.7.1"
ffprobe = "0.4.0"
ratatui = { version = "0.26.1", features = ["crossterm"] }
crossterm = "0.27.0"
color-eyre = "0.6.3"
strum = "0.26.3"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = 3
panic = "abort"
